--- a/config/database.yml.example
+++ b/config/database.yml.example
@@ -1,8 +1,8 @@
 default: &default
   adapter: postgresql
   encoding: unicode
-  username: postgres
-  password: dev
+  username: SEU_USUARIO
+  password: SEU_PASSSWORD
   host: localhost
   port: 5432
   pool: 5
@@ -13,4 +13,4 @@ development:
 
 test:
   <<: *default
-  database: api-teste-james-rspec
+  database: teste-james
